# Geospatial_ML

./: .gitignore  Copy_of_unet.ipynb  README.md  architecture.drawio  best_model.ipynb  color-system.ipynb  combine_npz_files.ipynb  example.env  metrics_bug.ipynb  pyproject.toml  requirements.txt  result1.ipynb  result2.ipynb
.github/: pull_request_template.md
data_exploration/: data_exploration.ipynb  display_images.py  initializing_training_data.py  mask_stats.py  physical_jaccard.ipynb  physics_jaccard.ipynb  physics_jaccard_emely.ipynb  stats.py
docs/: architecture.drawio  prepare_data(1).drawio
evaluation/: chunk_jaccard_matrix.py  evaluation_metrics.py  evaluation_metrics_total.py  helpers.py  jaccard_calculator.py  result1.ipynb
experiments/: experiment_1.ipynb  experiment_1_2.ipynb  experiment_3.ipynb  experiment_3_constantin.ipynb  experiment_4.ipynb  experiment_7.ipynb  experiment_8.ipynb  experiment_9.ipynb  fourier_transform.ipynb  helpers.py  hsv.ipynb  refactor_experiment.ipynb  refactor_experiment_2.ipynb  unet.ipynb
image_processing/: convolution.ipynb  filtering_frequency_domain.ipynb  filtering_spatial_domain.ipynb  fourier_transform.ipynb  fourier_transform.py  image_segmentation.ipynb  jpeg_compression.ipynb
models/: helpers.py  jaccard_index_calculator.py  simple_multi_unet_model.py  unet_model.py
notebooks/: experiment_1.ipynb  experiment_2.ipynb  experiment_3.ipynb  unet.ipynb  unet_experiment_1.ipynb  unet_taka.ipynb
prepare_data/: combine_npz_files.ipynb  concatenate.py  create_mask.py  downsampling.py  filter_tiles.py  main.py  (+11 more)
(+13 files in other folders)
